--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "binaryen": "^114.0.0"
     },
     "devDependencies": {
+        "@types/node": "^20.6.0",
         "@typescript-eslint/eslint-plugin": "^6.2.0",
         "@typescript-eslint/parser": "^6.2.0",
         "eslint": "^8.46.0",
