--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "author": "csjh",
     "license": "MIT",
     "dependencies": {
-        "binaryen": "^114.0.0",
-        "bun-types": "^1.0.2"
+        "binaryen": "^114.0.0"
     },
     "devDependencies": {
         "@types/node": "^20.6.0",
@@ -23,6 +22,8 @@
         "@typescript-eslint/parser": "^6.2.0",
         "eslint": "^8.46.0",
         "prettier": "^3.0.0",
-        "typescript": "^5.1.6"
+        "typescript": "^5.1.6",
+        "bun-types": "^1.0.2",
+        "vite": "^5.0.11"
     }
 }
