--- a/package.json
+++ b/package.json
@@ -31,10 +31,11 @@
         "@types/node": "^20.6.0",
         "@typescript-eslint/eslint-plugin": "^6.2.0",
         "@typescript-eslint/parser": "^6.2.0",
+        "bun-types": "^1.0.2",
         "eslint": "^8.46.0",
+        "glob": "^10.3.10",
         "prettier": "^3.0.0",
         "typescript": "^5.1.6",
-        "bun-types": "^1.0.2",
         "vite": "^5.0.11"
     }
 }
