--- a/package.json
+++ b/package.json
@@ -24,13 +24,13 @@
     "author": "csjh",
     "license": "MIT",
     "dependencies": {
-        "binaryen": "^116.0.0",
-        "dedent": "^1.5.1"
+        "binaryen": "^116.0.0"
     },
     "peerDependencies": {
         "vite": "^5.0.11"
     },
     "devDependencies": {
+        "dedent": "^1.5.1",
         "@types/node": "^20.6.0",
         "@typescript-eslint/eslint-plugin": "^6.2.0",
         "@typescript-eslint/parser": "^6.2.0",
