--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "vite": "^5.0.11"
     },
     "devDependencies": {
+        "eslint-config-prettier": "^9.1.0",
         "dedent": "^1.5.1",
         "@types/node": "^20.6.0",
         "@typescript-eslint/eslint-plugin": "^6.2.0",
