--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
         "@types/node": "^20.6.0",
         "@typescript-eslint/eslint-plugin": "^6.2.0",
         "@typescript-eslint/parser": "^6.2.0",
+        "acorn": "^8.11.3",
+        "esrap": "^1.2.2",
         "eslint": "^8.46.0",
         "prettier": "^3.0.0",
         "typescript": "^5.1.6",
